--- a/commissioner.html
+++ b/commissioner.html
@@ -51,7 +51,7 @@
                         <div class="dropdown-item"><a href="./events">Events</a></div>
                         <div class="dropdown-item"><a href="./wellness">Wellness Committee</a></div>
                         <div class="dropdown-item"><a href="./environment">Sustainability Committee</a></div>
-                        <div class="dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a></div>
+                        <div class="dropdown-item"><a href="./spaces">UES Spaces</a></div>
                         <div class="dropdown-item menu-bottom-item"><a href="./join#blog">Blogs</a></div>
                     </div>
                 </li>
@@ -138,8 +138,7 @@
                         <div class="mobile-dropdown-item"><a href="./events">Events</a></div>
                         <div class="mobile-dropdown-item"><a href="./wellness">Wellness Committee</a></div>
                         <div class="mobile-dropdown-item"><a href="./sustainability">Sustainability Committee</a></div>
-                        <div class="mobile-dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a>
-                        </div>
+                        <div class="mobile-dropdown-item"><a href="./spaces">UES Spaces</a></div>
                         <div class="mobile-dropdown-item"><a href="./join#blog">Blogs</a></div>
                     </div>
                 </li>
@@ -198,7 +197,7 @@
             </div>
         </ol>
     </div>
-
+    
     <!-- COUNCIL TEAM -->
     <div class="title team-title" id="council">2021-2022 Council</div><br>
     <div class="council-container">
