--- a/environment.html
+++ b/environment.html
@@ -51,7 +51,7 @@
                         <div class="dropdown-item"><a href="./events">Events</a></div>
                         <div class="dropdown-item"><a href="./wellness">Wellness Committee</a></div>
                         <div class="dropdown-item"><a href="./environment">Sustainability Committee</a></div>
-                        <div class="dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a></div>
+                        <div class="dropdown-item"><a href="./spaces">UES Spaces</a></div>
                         <div class="dropdown-item menu-bottom-item"><a href="./join#blog">Blogs</a></div>
                     </div>
                 </li>
@@ -138,8 +138,7 @@
                         <div class="mobile-dropdown-item"><a href="./events">Events</a></div>
                         <div class="mobile-dropdown-item"><a href="./wellness">Wellness Committee</a></div>
                         <div class="mobile-dropdown-item"><a href="./sustainability">Sustainability Committee</a></div>
-                        <div class="mobile-dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a>
-                        </div>
+                        <div class="mobile-dropdown-item"><a href="./spaces">UES Spaces</a></div>
                         <div class="mobile-dropdown-item"><a href="./join#blog">Blogs</a></div>
                     </div>
                 </li>
@@ -149,8 +148,7 @@
                         <div class="mobile-dropdown-item"><a href="./team">Executives</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#council">Council Members</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#yearrep">Year Reps</a></div>
-                        <div class="mobile-dropdown-item"><a href="./commissioner#commissioner">Commissioners &
-                                Directors</a></div>
+                        <div class="mobile-dropdown-item"><a href="./commissioner#commissioner">Commissioners & Directors</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#committee">Committee Members</a></div>
                     </div>
                 </li>
@@ -199,7 +197,7 @@
             </div>
         </ol>
     </div>
-
+    
     <!-- SUSTAINABILITY  -->
     <div class="sustainability-container">
         <div class="sustainability-title title">About Us</div>
