--- a/spaces.html
+++ b/spaces.html
@@ -198,36 +198,74 @@
         </ol>
     </div>
 
-    <div class="construction-container"> 
-        <div class="construction-sign">
-            <hr></hr>
-            <div class="construction-text">
-            Under <br>Construction
+    <!-- RANDOM BACKGROUND SHAPES -->
+    <img src="./img/Blob3.svg" class="background-blob2">
+
+    <!-- ENG JACKET -->
+    <div class="spaces-container">
+        <div class="title jacket-title">UES Lounge</div>
+
+        <div class="store-photo1" id="button-gallery-1">
+            <img src="img/spaces/lounge.png" style="border-radius: 40px;" height="300px">
+            <div class="store-photo-text">
+                <span style="position: absolute;height:20px;left:50%;top:50%;transform: translate(-50%,-50%);">UES Lounge</span>
             </div>
-            <hr></hr>
         </div>
-
-
+        <br>
+        Welcome to the UES Lounge, home to students who feel as though 40 hours in class a week just isn’t enough engineering for them! Come study, eat, socialize, game, and shop at the +/- store located just at the entrance. Having a long day? Take a quick nap on one of our comfy couches! This lounge is open at all times to engineering students, even on weekends (You will need your student ID to unlock the doors to SEB on weekends).
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 
-        <!-- FOOTER -->
-        <div class="footer special-footer">
-            <a href="/" class="footer-image">
-                <img src="./img/logo_white.png" height="30px">
-                <span style="margin-left:10px;">Western UES</span>
-            </a>
-            <div class="footer-text">
-                © 2021 Western UES
-            </div>
-    
-            <div class="footer-socials">
-                <a href="https://discord.gg/b8EfQSKKbK"><img src="img/disc.png" height=20px></a>
-                <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
-                <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
-                <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+    <!-- BOILERSUIT -->
+    <div class="discord-container">
+        <div class="title boilersuit-title">UES Discord</div>
+        <div class="store-photo2">
+            <img src="img/spaces/discord.png" style="border-radius: 40px;" height="300px" id="button-gallery-2">
+            <div class="store-photo-text">
+                <span style="position: absolute;height:20px;left:50%;top:50%;transform: translate(-50%,-50%);">Discord</span>
             </div>
         </div>
+        <br>
+        The Official UES Discord is an online dedicated community space and resource for Western Engineering Students. Come to socialize online, and participate in online events including online gaming tournaments. All we ask is to follow the community guidelines and rules. The UES Discord is available at all times to engineering students. <a href="https://discord.gg/anSYhsxfch">Join now!</a>
+        <br>
+        <br>
+        <br>
+        <br> 
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        
+    </div>
 
+    <!-- FOOTER -->
+    <div class="footer" style="position: fixed;bottom: 0;">
+        <a href="/" class="footer-image">
+            <img src="./img/logo_white.png" height="30px">
+            <span style="margin-left:10px;">Western UES</span>
+        </a>
+        <div class="footer-text">
+            © 2021 Western UES
+        </div>
+
+        <div class="footer-socials">
+            <a href="https://discord.gg/b8EfQSKKbK"><img src="img/disc.png" height=20px></a>
+            <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
+            <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
+            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+        </div>
+    </div>
 
     <script src="./js/script.js"></script>
 
