--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <div class="mission">
         <div class="title mission-title"> Our Mission </div>
         <div class="mission-description">
-            <span class="mission-description-text">The Westerm UES is dedicated to helping each and every student
+            <span class="mission-description-text">The Western UES is dedicated to helping each and every student
                 receive a full Western Engineering experience and enjoy their time here.
                 <br><a href="about" style="color:white;"><strong>Learn More</strong></a></span>
         </div>
