--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </video>
     </div> -->
 
-    <div class="countdown-container">
+    <<!-- div class="countdown-container">
         <div class="title" id="headline">Countdown to OWeek</div>
         <div id="countdown">
             <ul>
@@ -286,7 +286,7 @@
         </div>
         <br>
         <a class="cta-button" href="https://www.oweek.ca">Learn About OWeek</a>
-    </div>
+    </div> -->
 
     <hr class="line-break">
 
