--- a/events.html
+++ b/events.html
@@ -202,30 +202,30 @@
     <div class="weekly-events-container">
         <div class="title weekly-events-title">Weekly Events</div>
         <div class="events-container">
-            <div class="weekly-events-pic" style="background-image: url(/img/people.jpg);"></div>
+            <div class="weekly-events-pic" style="background-image: url(/img/events/2.png);"></div>
             <div class="weekly-events">
                 <div class="event">
-                    <div class="weekly-event-date">May xx, 2021</div>
-                    <div class="weekly-event-description">Exam Care Packages</div>
-                    <div class="sign-up-button"><a href="">Sign Up</a></div>
+                    <div class="weekly-event-date">Oct 04, 2021</div>
+                    <div class="weekly-event-description">Project Fund Application Workshop</div>
+                    <div class="sign-up-button"><a href="https://westernuniversity.zoom.us/j/92311541420">Zoom</a></div>
                 </div>
 
                 <div class="event">
-                    <div class="weekly-event-date">May xx, 2021</div>
-                    <div class="weekly-event-description">Shark Tank</div>
-                    <div class="sign-up-button"><a href="">Apply Here</a></div>
-                </div>
-
-                <div class="event">
-                    <div class="weekly-event-date">May xx, 2021</div>
+                    <div class="weekly-event-date">-</div>
                     <div class="weekly-event-description">UES Announcement Submissions</div>
-                    <div class="sign-up-button"><a href="">Submit Here</a></div>
+                    <div class="sign-up-button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSexGGACwSOUF5qBrp8j_KsesCSYs0btwxiKRu8ITpTTNQTSbw/viewform">Submit</a></div>
                 </div>
 
                 <div class="event">
-                    <div class="weekly-event-date">May xx, 2021</div>
-                    <div class="weekly-event-description">UES Commissioner Applications</div>
-                    <div class="sign-up-button"><a href="">Apply Here</a></div>
+                    <div class="weekly-event-date">Oct xx, 2021</div>
+                    <div class="weekly-event-description">-</div>
+                    <div class="sign-up-button"><a href="">-</a></div>
+                </div>
+
+                <div class="event">
+                    <div class="weekly-event-date">Oct xx, 2021</div>
+                    <div class="weekly-event-description">-</div>
+                    <div class="sign-up-button"><a href="">-</a></div>
                 </div>
             </div>
         </div>
