--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </video>
     </div> -->
 
-    <<!-- div class="countdown-container">
+    <!-- <div class="countdown-container">
         <div class="title" id="headline">Countdown to OWeek</div>
         <div id="countdown">
             <ul>
@@ -298,30 +298,21 @@
         </div>
         <div class="up-event-box-container">
             <div class="up-event-box event-1">
-                <div class="up-event-name">Commissioner Apps</div>
-                <div class="up-event-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                    interdum justo eget orci finibus mattis. Nulla convallis ex vitae urna auctor hendrerit. Curabitur
-                    sit amet mi sit amet urna ullamcorper ultricies ut convallis ante. Pellentesque a hendrerit metus.
-                    Quisque sodales sodales enim sit amet bibendum.
-                    <a href="#" class="up-event-button">Apply Now</a>
+                <div class="up-event-name">Project Fund Application Workshop</div>
+                <div class="up-event-description">The Project Fund Application Workshop gives students all the information they need to apply for funding through Project Fund and WESEF. 
+                    <a href="https://westernuniversity.zoom.us/j/92311541420" class="up-event-button">Zoom Link</a>
                 </div>
             </div>
             <div class="up-event-box event-2">
-                <div class="up-event-name">Commissioner Apps</div>
-                <div class="up-event-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                    interdum justo eget orci finibus mattis. Nulla convallis ex vitae urna auctor hendrerit. Curabitur
-                    sit amet mi sit amet urna ullamcorper ultricies ut convallis ante. Pellentesque a hendrerit metus.
-                    Quisque sodales sodales enim sit amet bibendum.
-                    <a href="#" class="up-event-button">Apply Now</a>
+                <div class="up-event-name">UES Announcement Submissions</div>
+                <div class="up-event-description">If you have an announcement that you would like displayed ont eh weekly posts, then fill out the Google Form in the link below! 
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSexGGACwSOUF5qBrp8j_KsesCSYs0btwxiKRu8ITpTTNQTSbw/viewform" class="up-event-button">Submit</a>
                 </div>
             </div>
             <div class="up-event-box event-3">
-                <div class="up-event-name">Commissioner Apps</div>
-                <div class="up-event-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                    interdum justo eget orci finibus mattis. Nulla convallis ex vitae urna auctor hendrerit. Curabitur
-                    sit amet mi sit amet urna ullamcorper ultricies ut convallis ante. Pellentesque a hendrerit metus.
-                    Quisque sodales sodales enim sit amet bibendum.
-                    <a href="#" class="up-event-button">Apply Now</a>
+                <div class="up-event-name">Event Name</div>
+                <div class="up-event-description">Description
+                    <a href="#" class="up-event-button">Link</a>
                 </div>
             </div>
         </div>
