--- a/events.html
+++ b/events.html
@@ -211,7 +211,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="weekly-event-date">-</div>
+                    <div class="weekly-event-date">Oct 04, 2021</div>
                     <div class="weekly-event-description">UES Announcement Submissions</div>
                     <div class="sign-up-button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSexGGACwSOUF5qBrp8j_KsesCSYs0btwxiKRu8ITpTTNQTSbw/viewform">Submit</a></div>
                 </div>
