--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                         <div class="mobile-dropdown-item"><a href="./team">Executives</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#council">Council Members</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#yearrep">Year Reps</a></div>
-                        <div class="mobile-dropdown-item"><a href="./commissioner#commissioner">Commissioners & Directors</a></div>
+                        <div class="mobile-dropdown-item"><a href="./commissioner#commissioner">Commissioners &
+                                Directors</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#committee">Committee Members</a></div>
                     </div>
                 </li>
@@ -197,7 +198,7 @@
             </div>
         </ol>
     </div>
-    
+
     <!-- RANDOM BACKGROUND SHAPES -->
     <img src="./img/Blob1.svg" class="background-blob1">
     <img src="./img/Blob2.svg" class="background-blob2">
@@ -299,14 +300,17 @@
         <div class="up-event-box-container">
             <div class="up-event-box event-1">
                 <div class="up-event-name">Project Fund Application Workshop</div>
-                <div class="up-event-description">The Project Fund Application Workshop gives students all the information they need to apply for funding through Project Fund and WESEF. 
+                <div class="up-event-description">The Project Fund Application Workshop gives students all the
+                    information they need to apply for funding through Project Fund and WESEF.
                     <a href="https://westernuniversity.zoom.us/j/92311541420" class="up-event-button">Zoom Link</a>
                 </div>
             </div>
             <div class="up-event-box event-2">
                 <div class="up-event-name">UES Announcement Submissions</div>
-                <div class="up-event-description">If you have an announcement that you would like displayed ont eh weekly posts, then fill out the Google Form in the link below! 
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSexGGACwSOUF5qBrp8j_KsesCSYs0btwxiKRu8ITpTTNQTSbw/viewform" class="up-event-button">Submit</a>
+                <div class="up-event-description">If you have an announcement that you would like displayed on the
+                    weekly posts, then fill out the Google Form in the link below!
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSexGGACwSOUF5qBrp8j_KsesCSYs0btwxiKRu8ITpTTNQTSbw/viewform"
+                        class="up-event-button">Submit</a>
                 </div>
             </div>
             <div class="up-event-box event-3">
