--- a/about.html
+++ b/about.html
@@ -253,30 +253,6 @@
         </div> 
     -->
 
-
-    <!-- SPONSORS -->
-    <div class="sponsors-container">
-        <div class="title">OUR SPONSORS</div>
-        <div class="sponsor-logos">
-            <a href="https://www.trudellmed.com/"><img class="sponsor-pic" src="./img/sponsor/trudell.png"></a>
-            <a href="https://www.ztr.com/"><img class="sponsor-pic" src="./img/sponsor/ztr.png"></a>
-            <a href="https://www.peo.on.ca/"><img class="sponsor-pic" src="./img/sponsor/peo.png"></a>
-            <a href="https://www.walkerind.com/"><img class="sponsor-pic" src="./img/sponsor/walker.png"></a>
-            <a href="http://www.cornerstonearchitecture.ca/"><img class="sponsor-pic"
-                    src="./img/sponsor/cornerstone.png"></a>
-            <a href="https://www.maplesoft.com/"><img class="sponsor-pic" src="./img/sponsor/maple.png"></a>
-            <a href="https://chorley.com/"><img class="sponsor-pic" src="./img/sponsor/chorleybisset.png"></a>
-            <a href="https://london.ca/"><img class="sponsor-pic" src="./img/sponsor/londong.png"></a>
-            <a href="http://www.meridian-mag.com/"><img class="sponsor-pic" src="./img/sponsor/meridian.png"></a>
-            <a href="https://www.golder.com/"><img class="sponsor-pic" src="./img/sponsor/golder.png"></a>
-            <a href="https://www.magna.com/"><img class="sponsor-pic" src="./img/sponsor/magna.png"></a>
-            <a href="https://www.jmpsolutions.com/"><img class="sponsor-pic" src="./img/sponsor/jmp.png"></a>
-            <a href="https://www.gd.com/"><img class="sponsor-pic" src="./img/sponsor/gd.png"></a>
-        </div>
-    </div>
-
-    <hr class="line-break">
-
     <!-- FEE BREAKDOWNS -->
     <div class="fee-breakdown">
         <div class="title">Fee Breakdown</div>
@@ -379,14 +355,36 @@
             <div class="email-text">
                 <strong> General Inquiries </strong>
                 <br>
-                Email: ues.prez@uwo.ca
-                Reach other council members
+                Email: westernues.president@gmail.com
                 <br>
                 <br>
                 <strong>Promotion/Social Media Inquiries </strong>
                 <br>
-                Email: ues.prez@uwo.ca & ues.vpcomm@uwo.ca
+                Email: westernues.comms@gmail.com
             </div>
+        </div>
+    </div>
+   
+    <hr class="line-break">   
+    
+    <!-- SPONSORS -->
+    <div class="sponsors-container">
+        <div class="title">OUR SPONSORS</div>
+        <div class="sponsor-logos">
+            <a href="https://www.trudellmed.com/"><img class="sponsor-pic" src="./img/sponsor/trudell.png"></a>
+            <a href="https://www.ztr.com/"><img class="sponsor-pic" src="./img/sponsor/ztr.png"></a>
+            <a href="https://www.peo.on.ca/"><img class="sponsor-pic" src="./img/sponsor/peo.png"></a>
+            <a href="https://www.walkerind.com/"><img class="sponsor-pic" src="./img/sponsor/walker.png"></a>
+            <a href="http://www.cornerstonearchitecture.ca/"><img class="sponsor-pic"
+                    src="./img/sponsor/cornerstone.png"></a>
+            <a href="https://www.maplesoft.com/"><img class="sponsor-pic" src="./img/sponsor/maple.png"></a>
+            <a href="https://chorley.com/"><img class="sponsor-pic" src="./img/sponsor/chorleybisset.png"></a>
+            <a href="https://london.ca/"><img class="sponsor-pic" src="./img/sponsor/londong.png"></a>
+            <a href="http://www.meridian-mag.com/"><img class="sponsor-pic" src="./img/sponsor/meridian.png"></a>
+            <a href="https://www.golder.com/"><img class="sponsor-pic" src="./img/sponsor/golder.png"></a>
+            <a href="https://www.magna.com/"><img class="sponsor-pic" src="./img/sponsor/magna.png"></a>
+            <a href="https://www.jmpsolutions.com/"><img class="sponsor-pic" src="./img/sponsor/jmp.png"></a>
+            <a href="https://www.gd.com/"><img class="sponsor-pic" src="./img/sponsor/gd.png"></a>
         </div>
     </div>
 
