added hyperlinks to essco and cfes, removed blog

--- a/join.html
+++ b/join.html
@@ -250,7 +250,7 @@
                     </div>
                 </div>
                 <br>
-                <a class="cta-button">Learn More</a>
+                <a class="cta-button", href = "essco.ca">Learn More</a>
             </div>
 
             <div class="conference-box">
@@ -283,12 +283,12 @@
                     </div>
                 </div>
                 <br>
-                <a class="cta-button">Learn More</a>
+                <a class="cta-button", href = "cfes.ca">Learn More</a>
             </div>
         </div>
     </div>
 
-    <!-- BLOG -->
+    <!-- BLOG
     <div class="blog-container" id="blog">
         <div class="title blog-title">UES Blog <br> Coming Soon</div>
 
@@ -299,7 +299,7 @@
                 <div class="blog-post-summary"></div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- FOOTER -->
     <div class="footer">
