--- a/join.html
+++ b/join.html
@@ -250,7 +250,7 @@
                     </div>
                 </div>
                 <br>
-                <a class="cta-button", href = "essco.ca">Learn More</a>
+                <a class="cta-button", href = "https://essco.ca">Learn More</a>
             </div>
 
             <div class="conference-box">
@@ -283,7 +283,7 @@
                     </div>
                 </div>
                 <br>
-                <a class="cta-button", href = "cfes.ca">Learn More</a>
+                <a class="cta-button", href = "https://cfes.ca">Learn More</a>
             </div>
         </div>
     </div>
