updated president email

--- a/team.html
+++ b/team.html
@@ -227,7 +227,7 @@
                         For the newcomers, welcome to the family- and to everyone else, welcome back! I can assure you
                         this is going to be an exciting year for engineering and I hope to meet you all soon (hopefully
                         in-person!) Feel free to reach out to me on instagram (@christophermohan) or via email
-                        (ues.prez@uwo.ca)
+                        (westernues.president@gmail.com))
                     </p>
                 </div>
             </div>
