--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     </div> -->
 
     <!-- REGULAR CAROUSEL -->
+    <!-- TODO @zhangvicto #1 please ensure that carousel buttons are working -->
     <div class="main-carousel">
         <div class="slide slide1" id="slide1">
             <div class="slide-background1">
@@ -222,6 +223,7 @@
                     <div class="slide-text-description">
                         Creating the best engineering experience possible.
                         <br><br>
+                        <!-- TODO #2 @zhangvicto can we link this to our opportunities page? -->
                         <a class="cta-button" href="https://www.eng.uwo.ca/">Join Us Today!</a>
                     </div>
                 </div>
@@ -250,6 +252,7 @@
                     <div class="slide-text-description">
                         Check out the UES +/- Store for your favourite merch and more!
                         <br><br>
+                        <!-- TODO #3 @zhangvicto button not working and link is not appropriate  -->
                         <a class="cta-button" href="https://www.eng.uwo.ca/">Take Me There!</a>
                     </div>
                 </div>
