--- a/about.html
+++ b/about.html
@@ -4,18 +4,7 @@
 
 <head>
     
-    <script
-        src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous">
-    </script>
-    <script> 
-        $(function(){
-        $("#header").load("header.html"); 
-        // $("#footer").load("footer.html"); 
-        });
-    </script> 
-    <div id="header"></div>
+    <!--#include file="header.html" -->
 
 </head>
 
