Minor role corrections

--- a/commissioner.html
+++ b/commissioner.html
@@ -357,7 +357,7 @@
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/Hannah\ Yee.jpg);"></div>
-            <div class="council-name">Hannah yee</div>
+            <div class="council-name">Hannah Yee</div>
             <div class="council-position">Wellness Commissioner</div>
             <div class="council-description">Description</div>
         </div>
@@ -370,13 +370,13 @@
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Lily Meyer</div>
-            <div class="council-position">Purple Arm Editors </div>
+            <div class="council-position">Purple Arm Editor </div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/Jeff.jpg);"></div>
             <div class="council-name">Jeff St. Jean</div>
-            <div class="council-position">Purple Arm Editors </div>
+            <div class="council-position">Purple Arm Editor </div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
@@ -424,13 +424,19 @@
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/Nik\ Kovacevic.png);"></div>
             <div class="council-name">Nik Kovacevic</div>
-            <div class="council-position">-</div>
+            <div class="council-position">Second Year Social</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/Jennifer\ Oliva.jpeg);"></div>
             <div class="council-name">Jennifer Olivia </div>
-            <div class="council-position">-</div>
+            <div class="council-position">Head Boilersuit</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Myeesha Siddique</div>
+            <div class="council-position">Head Boilersuit</div>
             <div class="council-description">Description</div>
         </div>
 
