--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
     </div> -->
 
     <!-- REGULAR CAROUSEL -->
-    <!-- TODO @zhangvicto #1 please ensure that carousel buttons are working -->
     <div class="main-carousel">
         <div class="slide slide1" id="slide1">
             <div class="slide-background1">
@@ -223,7 +222,6 @@
                     <div class="slide-text-description">
                         Creating the best engineering experience possible.
                         <br><br>
-                        <!-- TODO #2 @zhangvicto can we link this to our opportunities page? -->
                         <a class="cta-button" href="https://www.eng.uwo.ca/">Join Us Today!</a>
                     </div>
                 </div>
@@ -253,7 +251,7 @@
                         Check out the UES +/- Store for your favourite merch and more!
                         <br><br>
                         <!-- TODO #3 @zhangvicto button not working and link is not appropriate  -->
-                        <a class="cta-button" href="https://www.eng.uwo.ca/">Take Me There!</a>
+                        <a class="cta-button store-button" href="/jacket">Take Me There!</a>
                     </div>
                 </div>
             </div>
