--- a/admin.html
+++ b/admin.html
@@ -148,8 +148,7 @@
                         <div class="mobile-dropdown-item"><a href="./team">Executives</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#council">Council Members</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#yearrep">Year Reps</a></div>
-                        <div class="mobile-dropdown-item"><a href="./commissioner#commissioner">Commissioners &
-                                Directors</a></div>
+                        <div class="mobile-dropdown-item"><a href="./commissioner#commissioner">Commissioners & Directors</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#committee">Committee Members</a></div>
                     </div>
                 </li>
@@ -198,141 +197,22 @@
             </div>
         </ol>
     </div>
+    
+    <!-- Admin  -->
+    Council Resources <br>
+    All of the UES' resources can be found under the UES Google Drive, which contains all of the resources we provide to all of engineering. 
 
-    <!-- RANDOM BACKGROUND SHAPES -->
-    <img src="./img/Blob1.svg" class="background-blob1">
-    <img src="./img/Blob2.svg" class="background-blob2">
+    Exec Updates <br>
+    **To be updated
 
-    <!-- ALERT -->
-    <!--<div class="alert" id="alert1"><a href="https://www.eng.uwo.ca/Engineering-COVID-19-FAQ.html"
-            style="text-decoration: none;color:white;">Learn more about COVID-19</a>
-        <div class="close" onclick="fadeOut(alert1)"></div>
-    </div> -->
+    Finances <br>
+    ** To be updated
 
-    <!-- REGULAR CAROUSEL -->
-    <div class="main-carousel">
-        <div class="slide slide1" id="slide1">
-            <div class="slide-background1">
-                <div class="slide-text">
-                    <div class="slide-text-title">
-                        <img src="./img/logo_white.png" width=100px>
-                        <br>
-                        Western UES
-                    </div>
-                    <div class="slide-text-description">
-                        Creating the best engineering experience possible.
-                        <br><br>
-                        <a class="cta-button" href="https://www.eng.uwo.ca/">Join Us Today!</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    Governing Doc <br>
+    The UES follows...
 
-        <div class="slide slide2" id="slide2">
-            <div class="slide-background2">
-                <div class="slide-text">
-                    <div class="slide-text-title">
-                        Eng Jackets
-                    </div>
-                    <div class="slide-text-description">
-                        Check out the UES +/- Store for your favourite merch and more!
-                        <br><br>
-                        <a class="cta-button store-button" href="/jacket">Take Me There!</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="slide slide3" id="slide3">
-            <div class="slide-background3">
-                <div class="slide-text">
-                    <div class="slide-text-title">
-                       Western UES
-                    </div>
-                    <div class="slide-text-description">
-                        Creating the best engineering experience possible.
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="circle-container">
-            <div class="carousel-circle" id="circle1"></div>
-            <div class="carousel-circle" id="circle2"></div>
-            <div class="carousel-circle" id="circle3"></div>
-        </div>
-
-    </div>
-
-    <!-- OWEEK PROMO -->
-    <!-- <div class="oweek-container">
-        <div class="title">OWeek</div>
-        <div class="oweek-intro">Get ready for the most exciting week of the year, and the beginning of a new chapter in
-            your life! At Western Engineering, we love to celebrate with style.
-        </div>
-        <video class="oweek-video" controls>
-            <source src="./videos/oweek2020.mp4" type="video/mp4">
-        </video>
-    </div> -->
-
-    <!-- <div class="countdown-container">
-        <div class="title" id="headline">Countdown to OWeek</div>
-        <div id="countdown">
-            <ul>
-                <li><span id="days"></span>Days</li>
-                <li><span id="hours"></span>Hours</li>
-                <li><span id="minutes"></span>Minutes</li>
-                <li><span id="seconds"></span>Seconds</li>
-            </ul>
-        </div>
-        <br>
-        <a class="cta-button" href="https://www.oweek.ca">Learn About OWeek</a>
-    </div> -->
-
-    <hr class="line-break">
-
-    <!-- UPCOMING EVENTS -->
-    <div class="upcoming-events">
-        <div class="title up-event-title" style="text-align: left;"> Upcoming Events </div>
-        <div class="up-event-photo">
-            <div class="up-event-photo-description">Commissioner Apps</div>
-        </div>
-        <div class="up-event-box-container">
-            <div class="up-event-box event-1">
-                <div class="up-event-name">Project Fund Application Workshop</div>
-                <div class="up-event-description">The Project Fund Application Workshop gives students all the
-                    information they need to apply for funding through Project Fund and WESEF.
-                    <a href="https://westernuniversity.zoom.us/j/92311541420" class="up-event-button">Zoom Link</a>
-                </div>
-            </div>
-            <div class="up-event-box event-2">
-                <div class="up-event-name">UES Announcement Submissions</div>
-                <div class="up-event-description">If you have an announcement that you would like displayed on the
-                    weekly posts, then fill out the Google Form in the link below!
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSexGGACwSOUF5qBrp8j_KsesCSYs0btwxiKRu8ITpTTNQTSbw/viewform"
-                        class="up-event-button">Submit</a>
-                </div>
-            </div>
-            <!-- <div class="up-event-box event-3">
-                <div class="up-event-name">Something</div>
-                <div class="up-event-description">Description
-                    <a href="#" class="up-event-button">Link</a>
-                </div>
-            </div> -->
-        </div>
-    </div>
-
-
-    <!-- MISSION -->
-    <div class="mission">
-        <div class="title mission-title"> Our Mission </div>
-        <div class="mission-description">
-            <span class="mission-description-text">The Western UES is dedicated to helping each and every student
-                receive a full Western Engineering experience and enjoy their time here.
-                <br><a href="about" style="color:white;"><strong>Learn More</strong></a></span>
-        </div>
-    </div>
+    Finances <br>
+    The UES budget every year... 
 
     <!-- FOOTER -->
     <div class="footer">
@@ -345,10 +225,10 @@
         </div>
 
         <div class="footer-socials">
-            <a href="https://discord.gg/b8EfQSKKbK"><img src="img/disc.png" height=20px></a>
+            <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
             <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
             <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
-            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+            <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
         </div>
     </div>
 
@@ -356,4 +236,4 @@
 
 </body>
 
-</html>
+</htm
